// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <ReplyPreview /> and compare with snapshot 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": undefined,
        "opacity": undefined,
        "transform": [
          {
            "translateY": undefined,
          },
        ],
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "borderRadius": 8,
          "flexDirection": "row",
          "marginBottom": 8,
          "marginHorizontal": 10,
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#e9e9eb",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "#0084ff",
          "borderTopLeftRadius": 4,
          "height": "100%",
          "width": 4,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
          "paddingHorizontal": 10,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#0084ff",
                "fontSize": 13,
                "fontWeight": "600",
                "marginBottom": 2,
              }
            }
          >
            Replying to 
            John Doe
          </Text>
          <Text
            numberOfLines={2}
            style={
              [
                {
                  "fontSize": 14,
                },
                {
                  "color": "#333",
                },
                undefined,
              ]
            }
          >
            Original message to reply to
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderRadius": 12,
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 18,
              "fontWeight": "600",
            },
            {
              "color": "#333",
            },
          ]
        }
      >
        ×
      </Text>
    </View>
  </View>
</View>
`;

exports[`should render <ReplyPreview /> with image and compare with snapshot 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": undefined,
        "opacity": undefined,
        "transform": [
          {
            "translateY": undefined,
          },
        ],
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "borderRadius": 8,
          "flexDirection": "row",
          "marginBottom": 8,
          "marginHorizontal": 10,
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#e9e9eb",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "#0084ff",
          "borderTopLeftRadius": 4,
          "height": "100%",
          "width": 4,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
          "paddingHorizontal": 10,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Image
          source={
            {
              "uri": "https://example.com/image.jpg",
            }
          }
          style={
            [
              {
                "borderRadius": 4,
                "height": 40,
                "marginRight": 8,
                "width": 40,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#0084ff",
                "fontSize": 13,
                "fontWeight": "600",
                "marginBottom": 2,
              }
            }
          >
            Replying to 
            John Doe
          </Text>
          <Text
            numberOfLines={2}
            style={
              [
                {
                  "fontSize": 14,
                },
                {
                  "color": "#333",
                },
                undefined,
              ]
            }
          >
            Original message to reply to
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderRadius": 12,
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 18,
              "fontWeight": "600",
            },
            {
              "color": "#333",
            },
          ]
        }
      >
        ×
      </Text>
    </View>
  </View>
</View>
`;
